React chart install

--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -4,5 +4,5 @@
     box-shadow: 19px 15px 0px -9px rgba(66,66,66,0.75);
     -webkit-box-shadow: 19px 15px 0px -9px rgba(66,66,66,0.75);
     -moz-box-shadow: 19px 15px 0px -9px rgba(66,66,66,0.75);
-    height: 100px;
+    height: auto;
 }
