--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -9,15 +9,14 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        border-bottom: 2px solid black;
+       
         .logo{
             font-size: 20px;
             font-weight: bold;
         }
     }
-    hr{
-        height: 0;
-        border: 0.5px solid #555555;  
-    }
+
     .center{
         padding-left: 10px;
 
@@ -65,12 +64,24 @@
             margin: 0 5px;
             &:nth-child(1){
                 background-color: white;
+                &:active{
+                    border: 2px solid black;
+                    
+                }
             }
             &:nth-child(2){
                 background-color: rgb(29, 29, 29);
+                &:active{
+                    border: 2px solid rgb(255, 255, 255);
+                    
+                }
             }
             &:nth-child(3){
-                background-color: rgb(180, 180, 180);
+                background-color: rgb(160, 208, 240);
+                &:active{
+                    border: 2px solid black;
+                    
+                }
             }
         }
     }
