--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -10,4 +10,16 @@
             gap: 20px;
         }
     }
+    .listContainer{
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+        border: 1px solid black;
+        margin: 20px;
+        box-shadow: 19px 15px 0px -9px rgba(66,66,66,0.75);
+        -webkit-box-shadow: 19px 15px 0px -9px rgba(66,66,66,0.75);
+        -moz-box-shadow: 19px 15px 0px -9px rgba(66,66,66,0.75);
+        height: auto;
+    }
+
 }
